FIX: JSON Display overflow fix

--- a/src/Components/JSONDisplay/styles.scss
+++ b/src/Components/JSONDisplay/styles.scss
@@ -16,6 +16,8 @@
     border-radius: 4px;
     margin-top: 8px;
     padding: 24px;
+    padding-right: 50px;
+    overflow-y: scroll;
   }
   margin-bottom: 100px;
   ul {
